--- a/src/app/store/store.component.css
+++ b/src/app/store/store.component.css
@@ -214,6 +214,16 @@ input:focus {
     outline: none !important;
 }
 
+.pagination-container {
+    display: flex;
+    justify-content: center;
+    margin-top: 1rem;
+}
+
+.my-pagination /deep/ .ngx-pagination .current {
+    background: forestgreen;
+}
+
 @media (max-width: 46.875rem) { 
     .navbar, .header-text-image-container {
         display: flex;
