--- a/src/styles.css
+++ b/src/styles.css
@@ -3,8 +3,12 @@
 * {
     box-sizing: border-box;
     font-family: 'Poppins', sans-serif;
-    scroll-behavior: smooth;
-  }
+
+}
+
+html {
+  scroll-behavior: smooth;
+}
   
 body {
     margin: 0;
