--- a/src/app/category/category.component.css
+++ b/src/app/category/category.component.css
@@ -209,6 +209,15 @@ input:focus {
     background: forestgreen;
 }
 
+.noresultfound-container {
+    text-align: center;
+}
+
+.noresultfoundimg {
+    width: 250px;
+    height: auto;
+}
+
 @media (max-width: 46.875rem) { 
     .navbar, .header-text-image-container {
         display: flex;
