--- a/src/app/fullorderinfo/fullorderinfo.component.html
+++ b/src/app/fullorderinfo/fullorderinfo.component.html
@@ -35,7 +35,10 @@
                 </div>
             </div>
             <div class="header-image-container">
-                <img class="header-image" src="../../assets/images/delivered.png">
+                <img *ngIf="order_info.order_status == 3" class="header-image" src="../../assets/images/delivered.png">
+                <img *ngIf="order_info.order_status == 1" class="header-image" src="../../assets/images/Delivery (1).png">
+                <img *ngIf="order_info.order_status == 2" class="header-image" src="../../assets/images/Delivery (1).png">
+                <img *ngIf="order_info.order_status == 0" class="header-image" src="../../assets/images/ordercancel.png">
             </div>
         </div>
 
