--- a/src/app/register/otp/otp.component.html
+++ b/src/app/register/otp/otp.component.html
@@ -9,7 +9,7 @@
 <body>
     <div class="main-container animate__animated animate__fadeIn">
         <div class="otp-form">
-            <img src="../../../assets/images/otp.png">
+            <img src="../../../assets/images/otpemail.png">
             <p>Enter the One Time Pin code we sent to your email so we can verify it's you.</p>
             <input [(ngModel)]="acc_otp" type="text" placeholder="OTP">
             <div class="checkout-btn" (click)="nextForm()">
