Added navbar link hover animation

--- a/src/app/allstores/allstores.component.html
+++ b/src/app/allstores/allstores.component.html
@@ -49,7 +49,7 @@
         <ng-container *ngIf="(stores | filter:search.value) as result">
             <div class="noresultfound-container" *ngIf="result.length === 0">
                 <img src="../../assets/images/noresultsfound.png" class="noresultfoundimg">
-                <p>No product found.</p>
+                <p>No store found.</p>
             </div>
         </ng-container>
     </div>
