--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -101,7 +101,11 @@ footer {
 
 
 .navbar a:hover {
+	transform: scale(1.10);
     background-color: forestgreen;
+    color: black;
+    border-radius: 7px;
+    transition: transform 250ms cubic-bezier(.2,.8,.4,1);
     color: white;
 }
 
