--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -30,7 +30,7 @@
 
         <p class="formerror-messages" *ngIf="isSubmitted && errorControl.acc_gender.errors?.required">Your gender is required.</p>
 
-        <div class="address-input-container" [formGroup]="registrationForm">
+        <div class="input-container" [formGroup]="registrationForm">
             <input formControlName="acc_fname" [(ngModel)]="acc_fname" type="text" placeholder="First Name">
             <input [(ngModel)]="acc_mname" [ngModelOptions]="{standalone: true}" type="text" placeholder="Middle Name">
             <input formControlName="acc_lname" [(ngModel)]="acc_lname" type="text" placeholder="Last Name">
